--- a/requirements.txt
+++ b/requirements.txt
@@ -15,17 +15,21 @@ click==8.1.3
 colorama==0.4.6
 concepts==0.9.1
 confection==0.0.4
+confuse==2.0.1
 cycler==0.11.0
 cymem==2.0.7
 Cython==0.29.28
 debugpy==1.6.7
 decorator==5.1.1
 dill==0.3.6
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.1/en_core_web_trf-3.4.1-py3-none-any.whl#sha256=35c8490d34e9cebe129ee1c9143977aaf02d4bd6d224f30a79baf3838627339b
 entrypoints==0.4
 filelock==3.12.0
 flatbuffers==1.12
 fonttools==4.38.0
+fst-pso==1.8.1
 fuzzy-expert==0.1.0
+FuzzyTM==2.0.5
 gast==0.4.0
 gensim==4.2.0
 google-auth==2.18.1
@@ -37,6 +41,7 @@ h5py==3.1.0
 hnswlib==0.6.2
 huggingface-hub==0.0.12
 idna==3.4
+imageio==2.29.0
 importlib-metadata==6.6.0
 ipykernel==6.16.2
 ipython==7.34.0
@@ -54,11 +59,13 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 langcodes==3.3.0
 Levenshtein==0.21.0
+lime==0.2.0.1
 lxml==4.5.2
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
+miniful==0.0.6
 more-itertools==9.1.0
 multiprocess==0.70.14
 murmurhash==1.0.9
@@ -91,12 +98,14 @@ pycryptodome==3.18.0
 pydantic==1.9.2
 pydot==1.4.2
 pydotplus==2.0.2
+pyFUME==0.2.25
 Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-Levenshtein==0.21.0
 python-utils==3.5.2
 pytz==2023.3
+PyWavelets==1.3.0
 pywin32==306
 pywsd==1.2.4
 PyYAML==6.0
@@ -107,10 +116,13 @@ requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
 sacremoses==0.0.53
+save-thread-result==0.1.0
+scikit-image==0.19.3
 scikit-learn==1.0.2
 scipy==1.7.3
 sentence-transformers==2.0.0
 sentencepiece==0.1.99
+simpful==2.11.0
 six==1.15.0
 smart-open==6.3.0
 sortedcontainers==2.1.0
@@ -131,10 +143,11 @@ tensorflow-text==2.5.0
 termcolor==1.1.0
 thinc==8.1.10
 threadpoolctl==3.1.0
+tifffile==2021.11.2
 tika==2.6.0
 tokenizers==0.10.3
-torch==1.10.0
-torchvision==0.14.1
+torch==1.13.1
+torchvision==0.11.1
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
@@ -146,6 +159,7 @@ urllib3==2.0.2
 wasabi==0.10.1
 wcwidth==0.2.6
 Werkzeug==2.2.3
+whistle==1.0.1
 widgetsnbextension==4.0.7
 wikipedia==1.4.0
 wn==0.0.23
