--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ bitsets==0.8.4
 blis==0.7.9
 bs4==0.0.1
 cached-property==1.5.2
-cachetools==5.3.0
+cachetools==5.3.1
 catalogue==2.0.8
 certifi==2023.5.7
 chardet==4.0.0
@@ -22,17 +22,17 @@ Cython==0.29.28
 debugpy==1.6.7
 decorator==5.1.1
 dill==0.3.6
+# Editable install with no version control (doxpy==3.0)
+-e c:\users\skikk\downloads\doxpy-master\doxpy
 en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.1/en_core_web_trf-3.4.1-py3-none-any.whl#sha256=35c8490d34e9cebe129ee1c9143977aaf02d4bd6d224f30a79baf3838627339b
 entrypoints==0.4
 filelock==3.12.0
 flatbuffers==1.12
 fonttools==4.38.0
-fst-pso==1.8.1
 fuzzy-expert==0.1.0
-FuzzyTM==2.0.5
 gast==0.4.0
 gensim==4.2.0
-google-auth==2.18.1
+google-auth==2.19.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 graphviz==0.20.1
@@ -41,7 +41,7 @@ h5py==3.1.0
 hnswlib==0.6.2
 huggingface-hub==0.0.12
 idna==3.4
-imageio==2.29.0
+imageio==2.30.0
 importlib-metadata==6.6.0
 ipykernel==6.16.2
 ipython==7.34.0
@@ -59,13 +59,13 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 langcodes==3.3.0
 Levenshtein==0.21.0
+libclang==16.0.0
 lime==0.2.0.1
 lxml==4.5.2
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
-miniful==0.0.6
 more-itertools==9.1.0
 multiprocess==0.70.14
 murmurhash==1.0.9
@@ -98,7 +98,6 @@ pycryptodome==3.18.0
 pydantic==1.9.2
 pydot==1.4.2
 pydotplus==2.0.2
-pyFUME==0.2.25
 Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -109,20 +108,18 @@ PyWavelets==1.3.0
 pywin32==306
 pywsd==1.2.4
 PyYAML==6.0
-pyzmq==25.0.2
+pyzmq==25.1.0
 rapidfuzz==3.0.0
 regex==2023.5.5
-requests==2.30.0
+requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 sacremoses==0.0.53
-save-thread-result==0.1.0
 scikit-image==0.19.3
 scikit-learn==1.0.2
 scipy==1.7.3
 sentence-transformers==2.0.0
 sentencepiece==0.1.99
-simpful==2.11.0
 six==1.15.0
 smart-open==6.3.0
 sortedcontainers==2.1.0
@@ -139,6 +136,7 @@ tensorboard-plugin-wit==1.8.1
 tensorflow==2.5.0
 tensorflow-estimator==2.5.0
 tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.31.0
 tensorflow-text==2.5.0
 termcolor==1.1.0
 thinc==8.1.10
@@ -147,7 +145,7 @@ tifffile==2021.11.2
 tika==2.6.0
 tokenizers==0.10.3
 torch==1.13.1
-torchvision==0.11.1
+torchvision==0.14.1
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
